--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_form.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_form.html
@@ -2,36 +2,45 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% block inner %}
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">{% trans "Upload a new file" %}</h3>
+    {% if no_more_payments %}
+        <div class="alert alert-danger">
+            {% blocktrans trimmed with date=request.event.settings.payment_term_last|date:"SHORT_DATE_FORMAT" %}
+                In the payment settings of your event, you set the {{ date }} as the last date of any payments.
+                Therefore, you won't be able to mark any order as paid here.
+            {% endblocktrans %}
         </div>
-        <div class="panel-body">
-            <p>{% blocktrans trimmed %}
-                This page allows you to upload bank statement files to process incoming payments.
-            {% endblocktrans %}</p>
-            <p>{% blocktrans trimmed %}
-                Currently, this feature supports <code>.csv</code> files and files in the MT940 format.
-            {% endblocktrans %}</p>
-            {% if job_running %}
-                <div class="alert alert-info" data-job-waiting data-job-waiting-url="{% url "plugins:banktransfer:import.job" event=request.event.slug organizer=request.event.organizer.slug job=job_running.pk %}?ajax=1">
-                    <span class="fa fa-cog fa-spin"></span>
-                    {% trans "An import is currently being processed, please try again in a few minutes." %}
-                </div>
-            {% else %}
-                <form action="" method="post" enctype="multipart/form-data" class="form-inline">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="file">{% trans "Import file" %}: </label> <input id="file" type="file" name="file"/>
+    {% else %}
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{% trans "Upload a new file" %}</h3>
+            </div>
+            <div class="panel-body">
+                <p>{% blocktrans trimmed %}
+                    This page allows you to upload bank statement files to process incoming payments.
+                {% endblocktrans %}</p>
+                <p>{% blocktrans trimmed %}
+                    Currently, this feature supports <code>.csv</code> files and files in the MT940 format.
+                {% endblocktrans %}</p>
+                {% if job_running %}
+                    <div class="alert alert-info" data-job-waiting data-job-waiting-url="{% url "plugins:banktransfer:import.job" event=request.event.slug organizer=request.event.organizer.slug job=job_running.pk %}?ajax=1">
+                        <span class="fa fa-cog fa-spin"></span>
+                        {% trans "An import is currently being processed, please try again in a few minutes." %}
                     </div>
-                    <div class="clearfix"></div>
-                    <button class="btn btn-primary pull-right" type="submit">
-                        <span class="icon icon-upload"></span> {% trans "Start upload" %}
-                    </button>
-                </form>
-            {% endif %}
+                {% else %}
+                    <form action="" method="post" enctype="multipart/form-data" class="form-inline">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for="file">{% trans "Import file" %}: </label> <input id="file" type="file" name="file"/>
+                        </div>
+                        <div class="clearfix"></div>
+                        <button class="btn btn-primary pull-right" type="submit">
+                            <span class="icon icon-upload"></span> {% trans "Start upload" %}
+                        </button>
+                    </form>
+                {% endif %}
+            </div>
         </div>
-    </div>
+    {% endif %}
     {% if transactions_unhandled|length > 0 or request.GET.search %}
         <div class="panel panel-default">
             <div class="panel-heading">
