Fix #130: Mark required question fields at checkout

--- a/src/pretix/static/pretixpresale/scss/_forms.scss
+++ b/src/pretix/static/pretixpresale/scss/_forms.scss
@@ -33,3 +33,8 @@
     @include box-shadow($shadow);
   }
 }
+
+.form-group.required .control-label:after {
+  content: '*';
+  color: $brand-primary
+}
