--- a/src/pretix/static/pretixpresale/scss/_forms.scss
+++ b/src/pretix/static/pretixpresale/scss/_forms.scss
@@ -34,6 +34,10 @@
   }
 }
 
+.required-legend span {
+  color: $brand-primary;
+  font-weight: bold;
+}
 .form-group.required .control-label:after {
   content: '*';
   color: $brand-primary
