--- a/src/pretix/static/pretixpresale/scss/_forms.scss
+++ b/src/pretix/static/pretixpresale/scss/_forms.scss
@@ -33,3 +33,12 @@
     @include box-shadow($shadow);
   }
 }
+
+.required-legend span {
+  color: $brand-primary;
+  font-weight: bold;
+}
+.form-group.required .control-label:after {
+  content: '*';
+  color: $brand-primary
+}
